objects/advpm__Advologix_Timeline_Object_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__Field_Api_Name__c</fullName>
        <inlineHelpText>API Name of the source object field which maps to Timeline column</inlineHelpText>
        <label>Field Api Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Field_Name__c</fullName>
        <inlineHelpText>API Name of the Timeline column which maps to source object field</inlineHelpText>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__IsDateTimeField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is DateTime Field?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Timeline_Object_Id__c</fullName>
        <label>Timeline Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Advologix Timeline Object Fields</label>
</CustomObject>